fix misato tachibana theme footer spacing

--- a/tsundiary/static/themes/misato-tachibana.css
+++ b/tsundiary/static/themes/misato-tachibana.css
@@ -12,7 +12,7 @@ div#nav a { color: #FAE9CD; background: transparent; border-color: transparent; 
 div#nav a.cur_page { border-bottom-color: #DB9B8F; }
 
 /* Content section */
-div#content { padding-bottom: 130px; }
+div#content { padding-bottom: 230px; }
 
 /* Posts */
 .cloud, .post { border-width: 0.1em; border-color: rgba(32, 32, 32, 0.5); }
